--- a/section-3-rails-intro/alpha-blog/app/views/pages/home.html.erb
+++ b/section-3-rails-intro/alpha-blog/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <header role="banner">
   <h1><a href="/pages/home">AlphaBlog</a></h1>
   <ul>
-    <li><a href="/pages/home">Home</a></li>
-    <li><a href="/pages/about">About</a></li>
+    <li><%=link_to "Home", root_path%></li>
+    <li><%=link_to "About", about_path%></li>
     <li><a href="/pages/home">...</a></li>
   </ul>
 </header>
