--- a/section-3-rails-intro/alpha-blog/app/views/articles/edit.html.erb
+++ b/section-3-rails-intro/alpha-blog/app/views/articles/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Create an article</h1>
+<h1>Edit existing article</h1>
+
 <% if @article.errors.any? %>
 <ul>
   <% @article.errors.full_messages.each do |msg| %>
@@ -20,4 +21,5 @@
   </p>
 <% end %>
 
+<%= link_to 'Show this article', article_path(@article) %>
 <%= link_to "Back to articles listing", articles_path %>
