--- a/section-3-rails-intro/alpha-blog/app/views/pages/home.html.erb
+++ b/section-3-rails-intro/alpha-blog/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <ul>
     <li><%=link_to "Home", root_path%></li>
     <li><%=link_to "About", about_path%></li>
-    <li><a href="/pages/home">...</a></li>
+    <li><%= link_to "AlphaBlog", articles_path %></li>
   </ul>
 </header>
 <div class="body">
