--- a/alpha-blog/app/views/pages/about.html.erb
+++ b/alpha-blog/app/views/pages/about.html.erb
@@ -1,31 +1,14 @@
-<header role="banner">
-  <h1><a href="/pages/home">AlphaBlog</a></h1>
-  <ul>
-    <li><%=link_to "Home", root_path%></li>
-    <li><%=link_to "About", about_path%></li>
-    <li><a href="/pages/home">...</a></li>
-  </ul>
-</header>
-<div class="body">
-  <nav role="navigation" class="side">
-    <a href="">Articles</a>
-    <a href="">Article 1</a>
-    <a href="">Article 2</a>
-  </nav>
-  <main class="content">
-    <h1>About</h1>
-    <p>
-      About the me, the blog, and everything.
-    </p>
-  </main>
-  <aside class="side">
-    <p>Aside</p>
-    <p>to</p>
-    <p>the</p>
-    <p>side.</p>
-  </aside>
-</div>
-<footer role="contentinfo">
-  <p>WELCOME TO THE FOOTER</p>
-</footer>
-
+<article role="post">
+  <h1>Article 1</h1>
+  <time datetime="2017-03-13">3/13/2017</time>
+  <p>
+    This is the first article.
+  </p>
+</article>
+<article role="post">
+  <h1>Article 2</h1>
+  <time datetime="2017-03-14">3/14/2017</time>
+  <p>
+    And this is the second.
+  </p>
+</article>
